force-app/main/default/objects/ZBTouchpoint__c/ZBTouchpoint__c.object-meta.xml
<CustomObject>
    <label>ZB Touchpoint</label>
    <nameField>
        <displayFormat>T- {000000}</displayFormat>
        <label>ZB Touchpoint</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZB Touchpoints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>