force-app/main/default/objects/ZBTouchpoint__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>