force-app/main/default/objects/ZBTouchpoint__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>Elective_Surgery_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elective Surgery Date</label>
    <type>Date</type>
</CustomField>