force-app/main/default/objects/ZBTouchpoint__c/fields/Elective_Surgery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Elective_Surgery_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Expected date to start elective surgeries again</inlineHelpText>
    <label>Date to start elective surgeries?</label>
    <type>Date</type>
</CustomField>