force-app/main/default/objects/ZBTouchpoint__c/fields/Help_Required__c.field-meta.xml
<CustomField>
    <fullName>Help_Required__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How can we help you?</label>
    <type>TextArea</type>
</CustomField>