force-app/main/default/objects/ZBTouchpoint__c/fields/Locale_of_surgeries_in_1st_month__c.field-meta.xml
<CustomField>
    <fullName>Locale_of_surgeries_in_1st_month__c</fullName>
    <label>Locale of surgeries in 1st month?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>Select One</fullName>
                <default>true</default>
                <label>select one</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>