force-app/main/default/objects/ZBTouchpoint__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>