force-app/main/default/objects/ZBTouchpoint__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point of Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>