force-app/main/default/objects/ZBTouchpoint__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <formula>Point_of_Contact__r.Account.NPI__c</formula>
    <label>NPI#</label>
    <type>Text</type>
</CustomField>