force-app/main/default/objects/ZBTouchpoint__c/fields/NPI_TEXT__c.field-meta.xml
<CustomField>
    <fullName>NPI_TEXT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NPI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>