force-app/main/default/objects/ZBTouchpoint__c/fields/Percentage_of_Normal_Volume__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Normal_Volume__c</fullName>
    <description>%</description>
    <inlineHelpText>How do you expect volume to compare to normal volume in that first month back?</inlineHelpText>
    <label>% of Normal volume</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>