force-app/main/default/objects/ZBTouchpoint__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>