force-app/main/default/objects/ZBTouchpoint__c/fields/Phone_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Phone_SFDC__c</fullName>
    <formula>Surgeon_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone SFDC</label>
    <type>Text</type>
</CustomField>