force-app/main/default/objects/ZBTouchpoint__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Link to Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ZB Touchpoints</relationshipLabel>
    <relationshipName>ZB_Touchpoints</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>