force-app/main/default/objects/ZBTouchpoint__c/fields/Reason_for_Call__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Call</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>