force-app/main/default/objects/ZBTouchpoint__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other feedback/ideas</label>
    <type>TextArea</type>
</CustomField>