force-app/main/default/objects/ZBTouchpoint__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <formula>TEXT(Source_Segmentation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmentation</label>
    <type>Text</type>
</CustomField>