force-app/main/default/objects/ZBTouchpoint__c/fields/Source_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Source_Segmentation__c</fullName>
    <label>Source Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>