force-app/main/default/objects/ZBTouchpoint__c/fields/Spoke_with_customer__c.field-meta.xml
<CustomField>
    <fullName>Spoke_with_customer__c</fullName>
    <label>Spoke w customer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>