force-app/main/default/objects/ZBTouchpoint__c/fields/Surgeon_Name__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Surgeon Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZB Touchpoints</relationshipLabel>
    <relationshipName>ZB_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>