force-app/main/default/objects/ZBTouchpoint__c/validationRules/Call_Date_is_Required_Spoke_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_Date_is_Required_Spoke_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Spoke_with_customer__c , &quot;Yes&quot;),
  ISBLANK( Call_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Call_Date__c</errorDisplayField>
    <errorMessage>Please enter call date</errorMessage>
</ValidationRule>