force-app/main/default/objects/ZBTouchpoint__c/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>NAME</columns>
    <columns>Point_of_Contact__c</columns>
    <columns>Name__c</columns>
    <columns>Territory__c</columns>
    <columns>Phone__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Spoke_with_customer__c</columns>
    <columns>Call_Date__c</columns>
    <columns>Elective_Surgery_Start_Date__c</columns>
    <columns>Percentage_of_Normal_Volume__c</columns>
    <columns>Help_Required__c</columns>
    <columns>Recommendations__c</columns>
    <columns>NPI_TEXT__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Spoke_with_customer__c</field>
        <operation>equals</operation>
        <value>No,Pending</value>
    </filters>
    <label>Action Needed &amp; Pending</label>
</ListView>